Article bottom spacing, fixed id for title

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,10 +69,9 @@ body > header {
     border-bottom: 1px solid rgb(from CanvasText r g b / 50%);
 }
 
-footer {
-    margin-top: 1rem;
-    margin-top: 1lh;
-    border-top: 1px solid rgb(from CanvasText r g b / 50%);
+article {
+    margin-bottom: 1.5rem;
+    margin-bottom: 1.5lh;
 }
 
 article > header {
@@ -109,7 +108,7 @@ blockquote p {
 
 /* || Classes and IDs */
 
-#logo {
+#title {
     font-size: 250%;
     font-weight: bolder;
     text-decoration: none;
